// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Description > When in inline mode > renders emphasis text as <em> 1`] = `
<DocumentFragment>
  <em>
    abc
  </em>
</DocumentFragment>
`;

exports[`Description > When in inline mode > renders list markers as visible bullets while preserving emphasis 1`] = `
<DocumentFragment>
  • item one
• item two
• item three
</DocumentFragment>
`;

exports[`Description > When in inline mode > renders markdown link 1`] = `
<DocumentFragment>
  <a
    class="link_f1fk43bf"
    href="https://www.google.com"
    rel="noopener"
    target="_blank"
  >
    google
  </a>
</DocumentFragment>
`;

exports[`Description > When in inline mode > renders pure text 1`] = `
<DocumentFragment>
  this is a line of pure text
</DocumentFragment>
`;

exports[`Description > When in inline mode > renders raw link 1`] = `
<DocumentFragment>
  <a
    class="link_f1fk43bf"
    href="https://www.google.com"
    rel="noopener"
    target="_blank"
  >
    https://www.google.com
  </a>
</DocumentFragment>
`;

exports[`Description > When in inline mode > renders strong text as <strong> 1`] = `
<DocumentFragment>
  <strong>
    abc
  </strong>
</DocumentFragment>
`;

exports[`Description > When in normal mode > renders empty string 1`] = `<DocumentFragment />`;

exports[`Description > When in normal mode > renders markdown link 1`] = `
<DocumentFragment>
  <a
    class="link_f1fk43bf"
    href="https://www.google.com"
    rel="noopener"
    target="_blank"
  >
    google
  </a>
</DocumentFragment>
`;

exports[`Description > When in normal mode > renders markdown list as list 1`] = `
<DocumentFragment>
  <ul>
    <li>
      abc
    </li>
    <li>
      def
    </li>
  </ul>
</DocumentFragment>
`;

exports[`Description > When in normal mode > renders paragraphs 1`] = `
<DocumentFragment>
  <div>
    <p>
      Paragraph 1
    </p>
    <p>
      Paragraph 2
    </p>
  </div>
</DocumentFragment>
`;

exports[`Description > When in normal mode > renders pure text 1`] = `
<DocumentFragment>
  this is a line of pure text
</DocumentFragment>
`;

exports[`Description > When in normal mode > renders raw link 1`] = `
<DocumentFragment>
  <a
    class="link_f1fk43bf"
    href="https://www.google.com"
    rel="noopener"
    target="_blank"
  >
    https://www.google.com
  </a>
</DocumentFragment>
`;
